2005-03-22  Mark McLoughlin  <markmc@redhat.com>

	Patch from Alak Trakru <atrak@eden.rutgers.edu>

	* configure.ac: add slackware support.

2005-03-21  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: couple more minor fixes.

2005-03-21  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: lots of changes from Fedora Extras
	review.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: add BuildRequires: gettext-devel
	and add X-Fedora-Extra to .desktop file.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.17.
	
==================== 0.16 ====================

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.16.
	
2005-03-18  Mark McLoughlin  <markmc@redhat.com>
	
	* lib/userprofile.py: import sources from the
	sources module.
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/sources/testsource.py: import the
	various sabayon python modules from the
	sabayon namespace instead of expecting
	them to be in the toplevel namespace.

	* lib/sources/__init__.py: module init script
	for the sources module.
	
	* lib/sources/Makefile.am: install __init__.py

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: fix blooper.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: fix problems with displaying
	empty profiles.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: hopefully fix problem	which
	was causing obstuse "@INTLTOOL_PERL@: bad interpreter"
	error messages.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: forgot some fixes.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	Re-work the way we install all the python stuff to
	bring us in line with normal conventions.

	* admin-tool/Makefile.am: install the python files
	in libdir/python/site-packages/sabayon, remove the