@@ -1,5 +1,9 @@
 2005-03-22  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: add BuildRequires: usermode
+
+2005-03-22  Mark McLoughlin  <markmc@redhat.com>
+
 	Patch from Alak Trakru <atrak@eden.rutgers.edu>
 
 	* configure.ac: add slackware support.
